# munchmeter

./: .gitignore  CLAUDE.md  README.md
.claude/: launch.json
backend/: .env.example  pyproject.toml  smoke_test.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/routers/: extract.py  meals.py  nutrition.py  transcribe.py
backend/app/services/: ifct.py  ingredient_parser.py  nutrition.py  whisper.py
backend/data/: ifct2017.json
backend/scripts/: compile_ifct.py
backend/tests/: test_history.py  test_ifct.py  test_nutrition_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BottomTabBar.tsx  MacroSummary.tsx  MealCard.tsx  MealSlotPicker.tsx  QuantityPicker.tsx  RecordingSheet.tsx
frontend/src/hooks/: useHistory.ts  useMeals.ts  useRecorder.ts
frontend/src/pages/: Dashboard.tsx  History.tsx
frontend/src/types/: index.ts
