[project]
name = "munchmeter-backend"
version = "0.1.0"
description = "Voice-first calorie tracker backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "groq>=0.11.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
